add navbar and home page styles

--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,38 +1,38 @@
 <nav>
+  
   <div class="home">
     <a routerLink="/home" routerLinkActive="active" ariaCurrentWhenActive="page">
       <img src="../../assets/images/logo.svg" alt="">
 
     </a>
   </div>
-  <ul>
-    <li>
+  <ul class="middle-ul">
+    <li class="middle">
       <div class="dashboard">
         <a routerLink="/dashboard" routerLinkActive="active" ariaCurrentWhenActive="page">
-          Dashboard   </a>
+          Dashboard </a>
       </div>
     </li>
-
-    <li>
+    <li class="middle">
+      <div class="buy">
+        <a routerLink="/buySell" routerLinkActive="active" ariaCurrentWhenActive="page">
+          Buy</a>
+      </div>
+    </li>
+    <li class="middle">
+      <div class="wallet">
+        <a routerLink="/wallet" routerLinkActive="active" ariaCurrentWhenActive="page">
+          Wallet</a>
+      </div>
+    </li>
+    <li class="middle">
       <div class="profile">
         <a routerLink="/userProfile" routerLinkActive="active" ariaCurrentWhenActive="page">
           Profile
         </a>
       </div>
     </li>
-    <li>
-      <div class="buy">
-        <a routerLink="/buySell" routerLinkActive="active" ariaCurrentWhenActive="page">
-          Buy</a>
-      </div>
-    </li>
-    <li>
-      <div class="wallet">
-        <a routerLink="/wallet" routerLinkActive="active" ariaCurrentWhenActive="page">
-          Wallet</a>
-      </div>
-    </li>
-    <li>
+    <li class="middle">
       <div class="history">
         <a routerLink="/history" routerLinkActive="active" ariaCurrentWhenActive="page"> History
         </a>
@@ -40,35 +40,35 @@
     </li>
   </ul>
   <div class="right right-button-container">
-  <ul>
-    <li *ngIf="!(cryptoservices.isLoggedIn$ | async)">
-      <div class="register">
-        <a routerLink="/register" routerLinkActive="active" ariaCurrentWhenActive="page">
-          Register
-        </a>
-      </div>
-    </li>
-    <li *ngIf="!(cryptoservices.isLoggedIn$ | async)">
-      <div class="login">
-        <a routerLink="/login" routerLinkActive="active" ariaCurrentWhenActive="page">
-          Login
-        </a>
-      </div>
-    </li>
-    <li *ngIf="(cryptoservices.isLoggedIn$ | async)">
-      <div class="logout">
-        <button (click)="logout()">
-          Log Out
-        </button>
-      </div>
-    </li>
-    <li *ngIf="(cryptoservices.isLoggedIn$ | async)">
-      <div class="credit-card">
-        <button (click)="openCardModal()">
-          Credit Card
-        </button>
-      </div>
-    </li>
-  </ul>
-</div>
+    <ul class="right-ul">
+      <li *ngIf="!(cryptoservices.isLoggedIn$ | async)">
+        <div class="register">
+          <a routerLink="/register" routerLinkActive="active" ariaCurrentWhenActive="page">
+            Register
+          </a>
+        </div>
+      </li>
+      <li *ngIf="!(cryptoservices.isLoggedIn$ | async)">
+        <div class="login">
+          <a routerLink="/login" routerLinkActive="active" ariaCurrentWhenActive="page">
+            Login
+          </a>
+        </div>
+      </li>
+      <li *ngIf="(cryptoservices.isLoggedIn$ | async)">
+        <div class="logout">
+          <button (click)="logout()">
+            Log Out
+          </button>
+        </div>
+      </li>
+      <li *ngIf="(cryptoservices.isLoggedIn$ | async)">
+        <div class="credit-card">
+          <button (click)="openCardModal()">
+            Credit Card
+          </button>
+        </div>
+      </li>
+    </ul>
+  </div>
 </nav>
