--- a/src/app/features/components/home/home.component.html
+++ b/src/app/features/components/home/home.component.html
@@ -1,43 +1,18 @@
 <body>
-    <header>
-        <h1>About This Page <i class="fa-solid fa-house"></i></h1>
-    </header>
-    <main>
-        <section class="dashboard">
+    <div class="home">
+        <div class="get-started">
             <div>
-                <h2> Crypto Dashboard</h2>
-                <p>Our Dashboard is the central hub of your crypto journey, offering a panoramic view of the
-                    ever-changing digital asset landscape. Designed with both novices and seasoned traders in mind, </p>
+                <h1>Jump start your crypto portfolio</h1>
+                <p>This page is the easiest place to buy and sell cryptocurrency. Sign up and get started today. Stay on
+                    top of the markets with the app</p>
+                <a routerLink="/register" routerLinkActive="active" ariaCurrentWhenActive="page">Get Started</a>
             </div>
-            <i class="fa-solid fa-table fa-beat"></i>
-        </section>
-        <section class="statistic">
-            <div>
-                <h2>Line Charts</h2>
-                <p>Our line charts offer you a powerful tool for tracking the ever-fluctuating value of cryptocurrencies
-                    over time. They transform complex data into a visual narrative, and make well-informed decisions
-                    effortlessly.</p>
-            </div>
-            <i class="fa-solid fa-chart-line fa-beat"></i>
-        </section>
-        <section class="buy-sell">
-            <div>
-                <h2> Crypto Transactions</h2>
-                <p>
-                    Buy and Sell Features: Empowering Your Crypto Transactions
-
-                    Our buy and sell features are the beating heart of your crypto trading experience, offering you a
-                    seamless and secure way to enter and exit the market.</p>
-            </div>
-            <i class="fa-solid fa-money-bill-transfer fa-beat"></i>
-        </section>
-        <section class="history">
-            <div>
-                <h2>Transaction History </h2>
-                <p>Our Transaction History feature offers a detailed record of every crypto transaction you've made, whether it's buying, selling, or transferring digital assets. Each entry includes information such as the date, time and type</p>
-            </div>
-            <i class="fa-solid fa-money-bill-trend-up fa-beat"></i>
-        </section>
-        <a href="">Get Started</a>
-    </main>
+        </div>
+        <div class="image">
+            <img src="../../../../assets/images/home.png" alt="">
+        </div>
+    </div>
+    <div class="description">
+        <h1>Buy, sell, and spend crypto on the world's most trusted crypto exchange</h1>
+    </div>
 </body>
