--- a/src/app/features/components/home/home.component.scss
+++ b/src/app/features/components/home/home.component.scss
@@ -1,72 +1,63 @@
+* {
+  font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
+}
 body {
-  font-family: Arial, sans-serif;
-  background-color: #141414;
-  height: 100vh;
-}
-
-header {
-  color: #fff;
-  padding: 20px;
-  text-align: center;
-
-  h1 {
-    font-size: 24px;
-    color: #4caf50;
-
-    i {
-      margin-left: 10px;
-    }
-  }
-}
-
-main {
-  max-width: 1200px;
-  margin: 0 auto;
-  padding: 20px;
-
-  section {
-    background-color: #000000;
-    margin-bottom: 20px;
-    padding: 20px;
-    border-radius: 5px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  .home {
+    padding-top: 40px;
     display: flex;
+    justify-content: center;
     align-items: center;
-    justify-content: space-between;
-    border-radius: 20px;
+    padding-bottom: 85px;
 
-    div {
-      h2 {
-        font-size: 18px;
-        color: #4caf50;
-        margin-bottom: 10px;
-      }
-
-      p {
-        font-size: 14px;
-        color: #ffffff;
-        max-width: 70%;
+    .image {
+      img {
+        max-width: 80%;
+        height: 80%;
       }
     }
-
-    i {
-      font-size: 60px;
-      color: #4caf50;
-      margin-right: 20px;
+    .get-started {
+      div {
+        margin-left: 20%;
+        h1 {
+          font-size: 60px;
+          font-weight: bold;
+          max-width: 70%;
+          line-height: 70px;
+          margin-bottom: 20px;
+        }
+        p {
+          font-size: large;
+          font-weight: bold;
+          max-width: 80%;
+          margin-bottom: 35px;
+        }
+        a {
+          padding: 20px 40px;
+          background-color: #014cec;
+          text-decoration: none;
+          color: white;
+          font-weight: bold;
+          border-radius: 10px;
+          font-size: 20px;
+        }
+      }
     }
   }
+  .description {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    h1 {
+      color: #014cec;
+      font-size: 30px;
+      font-weight: bold;
+    }
+  }
+}
 
-  a {
-    display: block;
-    width: 10%;
-    text-align: center;
-    background-color: #4caf50;
-    color: #000000;
-    padding: 10px 0;
-    border-radius: 5px;
-    text-decoration: none;
-    font-weight: bold;
-    margin-top: 20px;
-    margin-bottom: 20px;
+@media screen and (max-width: 768px) {
+  img {
+    display: none;
   }
 }
