--- a/src/app/navbar/navbar.component.scss
+++ b/src/app/navbar/navbar.component.scss
@@ -5,73 +5,79 @@ nav {
   justify-content: space-around;
   align-items: center;
   padding: 10px 20px;
+  a {
+    text-decoration: none;
+    box-shadow: inset 0 0 0 0 #014cec;
+    color: #000000;
+    margin: 0 -0.25rem;
+    padding: 0 0.25rem;
+    transition: color 0.3s ease-in-out, box-shadow 0.3s ease-in-out;
+    font-size: 16px;
+  }
+
+  ul .middle a:hover {
+    box-shadow: inset 100px 0 0 0 #014cec;
+    color: white;
+    padding-top: 5px;
+    padding-bottom: 5px;
+    border-radius: 4px;
+  }
+
+  ul {
+    list-style: none;
+    display: flex;
+    margin: 0;
+    padding: 0;
+  }
+
+  li div a {
+    margin: 18px;
+    font-weight: bolder;
+  }
+
+  .right.right-button-container {
+    display: flex;
+    align-items: center;
+  }
+
+  .right-button-container a,
+  .right-button-container button {
+    text-decoration: none;
+    color: #ffffff;
+    margin: 0 10px;
+    font-weight: bolder;
+    transition: color 0.3s;
+    padding: 8px 16px;
+    background-color: #014cec;
+    border-radius: 20px;
+    border-style: none;
+    cursor: pointer;
+  }
 }
-
-nav a {
-  text-decoration: none;
-  color: #000000;
-  transition: color 0.3s;
-}
-
-nav a:hover {
-  text-decoration: underline; 
-}
-
-nav ul {
-  list-style: none;
-  display: flex;
-  margin: 0;
-  padding: 0;
-}
-
-nav li div a {
-  margin: 18px;
-  font-weight: bolder;
-}
-
-.nav-logo img {
-  width: 60px;
-}
-
-.right.right-button-container {
-  display: flex;
-  align-items: center;
-}
-
-.right-button-container a,
-.right-button-container button {
-  text-decoration: none;
-  color: #000000;
-  margin: 0 10px;
-  font-weight: bolder;
-  transition: color 0.3s;
-  padding: 5px 10px;
-}
-
-.right-button-container a:hover,
-.right-button-container button:hover {
-  text-decoration: underline;
-  background-color: #ffa500;
-}
-
-
 
 @media screen and (max-width: 768px) {
-  nav ul {
-    display: none;
-    flex-direction: column;
-    background-color: #0061a8;
-    position: absolute;
-    top: 60px;
-    right: 0;
-    padding: 20px;
-  }
+  nav {
+    .right-ul {
+      display: flex;
+      flex-direction: column;
+      gap: 15px;
+    }
 
-  nav ul.show {
-    display: flex;
-  }
+    .middle-ul {
+      list-style: none;
+      display: flex;
+      flex-direction: column;
+      margin: 0;
+      padding: 0;
+    }
 
-  nav ul li {
-    margin: 10px 0;
+    img {
+      width: 90px;
+    }
+
+    .right-button-container a,
+    .right-button-container button {
+      padding: 4px 8px;
+    }
   }
 }
