--- a/src/app/features/components/history/history.component.scss
+++ b/src/app/features/components/history/history.component.scss
@@ -1,43 +1,46 @@
 body {
-    font-family: Arial, sans-serif;
-    background-color: #191919;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
-    margin: 0;
-  
-    div {
-      background-color: #0d0d0d; 
-      padding: 30px;
-      border-radius: 5px;
-      box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
-      border-radius: 20px;
-  
-      h1 {
-        font-size: 24px;
-        text-align: center;
-        margin-bottom: 20px;
-        color: #4caf50;
-      }
-  
-      table {
-        width: 100%;
-        border-collapse: collapse;
+  display: flex;
+  justify-content: center;
+  margin: 0;
+  div {
+    background-color: #ffffff;
+    border-radius: 8px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    padding: 20px;
+    text-align: center;
+    margin-top: 60px;
+    
+    h1 {
+      font-size: 36px; 
+      color: #333;
+      margin-bottom: 20px;
+      font-weight: bold;     
+    }
 
-        th, td {
-          padding: 10px;
-          color: white;
-          text-align: center;
-          font-size: large;
+    table {
+      width: 100%;
+      border-collapse: collapse;
+
+      th, td {
+        padding: 10px;
+        border-bottom: 1px solid #ddd;
+        text-align: left;
+        
+        i {
+          font-size: 20px;
+          margin-right: 10px;
         }
-        th{
-          color: black;
-        }
-  
-        thead {
-          background-color: #4caf50;
-        }
+      }
+
+      th {
+        background-color: #f0f0f0; 
+        color: #0055ff; 
+
+      }
+      
+      tr:hover {
+        background-color: #f5f5f5; 
       }
     }
   }
+}
