--- a/src/app/features/components/user-profile/user-profile.component.scss
+++ b/src/app/features/components/user-profile/user-profile.component.scss
@@ -1,57 +1,64 @@
 body {
-  margin: 0;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  min-height: 100vh;
-  background-color: #f0f0f0;
   font-family: Arial, sans-serif;
-  background-color: #141414;
+  margin: 0;
+  padding: 0;
   div {
-    text-align: center;
-    background-color: #0c0c0c;
-    border-radius: 10px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    margin: 20px auto;
+    background-color: #fff;
     padding: 20px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-    transform: translate(0, -200px);
+    border-radius: 5px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    width: 50%;
+    box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px,
+      rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px,
+      rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
   }
-  
-  h1 {
-    font-size: 30px;
-    color: #4caf50;
-  
+  h1{
+    margin-top: 10px;
+    font-weight: bold;
   }
-  
-  i {
-    font-size: 36px;
-    color: #4caf50;
-  }
-  
-  p {
-    font-size: 25px;
-    margin: 8px 0;
-    padding: 5px;
-    color: white;
-  }
-  
-  ul {
-    list-style: none;
-    padding: 0;
-  }
-  
-  li {
-    font-size: 20px;
-    margin: 4px 0;
-    padding: 5px;
-    color: #ffffff;
-    .crypto-key{
-      color: rgb(160, 160, 0);
-      font-weight: bolder;
-    }
-    .crypto-value{
-      color: green;
-    }
-  }
-  
-}
 
+  .fa-regular.fa-user {
+    font-size: 60px;
+    color: #3273dc;
+  }
+
+  table {
+    width: 100%;
+    border-collapse: collapse;
+    margin-top: 20px;
+    tr {
+      border-bottom: 1px solid #e0e0e0;
+      td {
+        padding: 10px;
+        font-size: 22px;
+      }
+      td:first-child {
+        width: 20px;
+      }
+      td:nth-child(2) {
+        font-weight: bold;
+        padding-left: 10px;
+      }
+      .crypto{
+        color: #8d8d00;
+      }
+    }
+  }
+
+  .crypto-key {
+    color: #000000;
+    font-size: 18px;
+  }
+
+  .crypto-value {
+    font-weight: bold;
+    color: #3273dc;
+    font-family: monospace;
+    font-size: 18px;
+  }
+}
