--- a/src/app/navbar/navbar.component.scss
+++ b/src/app/navbar/navbar.component.scss
@@ -5,6 +5,8 @@ nav {
   justify-content: space-around;
   align-items: center;
   padding: 10px 20px;
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px,
+  rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
   a {
     text-decoration: none;
     box-shadow: inset 0 0 0 0 #014cec;
@@ -18,8 +20,6 @@ nav {
   ul .middle a:hover {
     box-shadow: inset 100px 0 0 0 #014cec;
     color: white;
-    padding-top: 5px;
-    padding-bottom: 5px;
     border-radius: 4px;
   }
 
