change conditional rendering logic and add styles

--- a/src/app/features/components/buy-sell/buy-sell.component.html
+++ b/src/app/features/components/buy-sell/buy-sell.component.html
@@ -5,8 +5,8 @@
       <thead>
         <tr>
           <th>Name</th>
-          <th>Price (USD)</th>
-          <th>Change (24Hr)</th>
+          <th>Price</th>
+          <th class="change-th">Change</th>
           <th>Action</th>
         </tr>
       </thead>
