--- a/src/app/features/components/wallet/wallet.component.html
+++ b/src/app/features/components/wallet/wallet.component.html
@@ -1,5 +1,7 @@
 <body>
   <div class="dashboard">
+    <h1><i class="fa-solid fa-money-bill-transfer"></i></h1>
+
     <h1>Sell Crypto</h1>
     <div *ngIf="user">
       <table class="crypto-table">
