--- a/src/app/features/components/buy-sell/buy-sell.component.scss
+++ b/src/app/features/components/buy-sell/buy-sell.component.scss
@@ -1,90 +1,86 @@
-.dashboard {
-  font-family: Arial, sans-serif;
-  padding: 20px;
-  background-color: #1c1c1c;
-
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+body {
   display: flex;
   justify-content: center;
-  align-items: center;
-  flex-direction: column;
-  h1 {
-    font-size: 24px;
-    margin: 0;
-    padding: 10px 0;
-    text-align: center;
-    color: #00a049;
-  }
+  margin: 0;
+  font-family: monospace;
+  .dashboard {
+    display: flex;
+    flex-direction: column;
+    background-color: #ffffff;
+    border-radius: 8px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    padding: 20px;
+    margin-top: 30px;
 
-  .crypto-table {
-    width: 50%;
-    margin-top: 20px;
-    border-radius: 20px;
-    background-color: #141414;
-
-    .name{
-      color: white;
-      font-weight: bold;
+    .crypto-table {
+      border-collapse: collapse;
+      background-color: #fff;
+      border-radius: 8px;
+      box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
     }
-    thead {
-      background-color: #000000;
-      color: #fff;
-      
+    h1 {
+      font-size: 35px;
+      font-weight: bolder;
+      padding-bottom: 15px;
+      margin: 0 auto;
+      font-family: Georgia, "Times New Roman", Times, serif;
+      color: #024f02;
     }
+ 
 
-    th {
-      padding: 10px;
+    .crypto-table th {
+      background-color: #f3f3f3;
       text-align: left;
       font-size: 18px;
-      color: #00a049;
-      border-radius: 20px;
-      text-align: center;
+      font-weight: bolder;
+      margin-top: 20px;
     }
 
-    tbody {
-      tr {
-        transition: background-color 0.3s;
-        text-align: center;
-
-        &:hover {
-          background-color: #2e2e2e;
-        }
-
-        td {
-          padding: 10px;
-
-          &:first-child {
-            font-weight: bold;
-          }
-
-          &:nth-child(2) {
-            font-weight: bold;
-            color: #00a049;
-          }
-
-          &:nth-child(3) {
-            font-weight: bold;
-          }
-        }
-        .red-text {
-          color: red;
-        }
-        
-        .green-text {
-          color: green;
-        }
-
-        button {
-          background-color: #00a049;
-          color: #000000;
-          border: none;
-          padding: 5px 10px;
-          border-radius: 5px;
-          cursor: pointer;
-          transition: background-color 0.3s;
-          font-weight: bold;
-        }
-      }
+    .crypto-table td {
+      padding: 10px;
+      font-size: 16px;
+      font-weight: bold;
     }
+
+    .crypto-table .name {
+      font-weight: bold;
+    }
+
+    .crypto-table .change {
+      color: #024f02;
+    }
+
+    button {
+      background-color: #024f02;
+      color: #fff;
+      border: none;
+      padding: 10px 20px;
+      border-radius: 4px;
+      cursor: pointer;
+    }
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .change  {
+    display: none;
+  }
+  .change-th{
+    display: none;
+  }
+  h1 {
+    font-size: 20px;
+    font-weight: bolder;
+  }
+  .crypto-table th {
+    font-size: 10px;
+  }
+
+  .crypto-table td {
+    font-size: 8px;
+  }
+  body .dashboard button {
+    border: none;
+    padding: 5px 10px;
   }
 }
