--- a/src/app/features/components/history/history.component.scss
+++ b/src/app/features/components/history/history.component.scss
@@ -2,6 +2,7 @@ body {
   display: flex;
   justify-content: center;
   margin: 0;
+  font-family: monospace;
   div {
     background-color: #ffffff;
     border-radius: 8px;
@@ -9,23 +10,25 @@ body {
     padding: 20px;
     text-align: center;
     margin-top: 60px;
-    
+
     h1 {
-      font-size: 36px; 
+      font-size: 36px;
       color: #333;
       margin-bottom: 20px;
-      font-weight: bold;     
+      font-weight: bold;
+      font-family: Georgia, "Times New Roman", Times, serif;
     }
 
     table {
       width: 100%;
       border-collapse: collapse;
-
-      th, td {
+      th,
+      td {
         padding: 10px;
         border-bottom: 1px solid #ddd;
-        text-align: left;
-        
+        text-align: center;
+
+        font-size: 18px;
         i {
           font-size: 20px;
           margin-right: 10px;
@@ -33,13 +36,12 @@ body {
       }
 
       th {
-        background-color: #f0f0f0; 
-        color: #0055ff; 
-
+        background-color: #f0f0f0;
+        color: #0055ff;
       }
-      
+
       tr:hover {
-        background-color: #f5f5f5; 
+        background-color: #f5f5f5;
       }
     }
   }
