--- a/src/app/features/components/wallet/wallet.component.scss
+++ b/src/app/features/components/wallet/wallet.component.scss
@@ -1,50 +1,59 @@
 body {
-  background-color: #191919;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 100vh;
-  margin: 0;
-}
-
-.dashboard {
-  background-color: #0d0d0d;
-  padding: 20px;
-  border-radius: 10px;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
-  text-align: center;
-
-  h1 {
-    color: #4caf50;
-    margin-bottom: 20px;
+  font-family: monospace;
+  .dashboard {
+    margin: 0 auto;
+    border-radius: 8px;
+    box-shadow: 0px 0px 8px rgba(0, 0, 0, 0.1);
+    padding: 20px;
+    max-width: 800px;
+    margin-top: 20px; 
+    box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px,
+      rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px,
+      rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
   }
-
+  i{
+    font-size: 40px;
+    color: #c70000;
+    margin: 0 auto;
+    text-align: center;
+  }
+  h1 {
+    font-size: 24px;
+    margin: 0;
+    text-align: center;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    font-weight: bold;
+  }
+  
   .crypto-table {
     width: 100%;
     border-collapse: collapse;
-
-    th {
-      background-color: #4caf50;
-      color: #000000;
-      padding: 10px;
-    }
-
-    td {
-      background-color: #0d0d0d;
-      color: #fff;
-      padding: 15px;
-      font-size: large;
-
-      button {
-        background-color: #4caf50;
-        color: #000000;
-        font-weight: bold;
-        border: none;
-        padding: 5px 10px;
-        border-radius: 5px;
-        cursor: pointer;
-        font-size: medium;
-      }
-    }
+    margin-top: 20px;
+  }
+  
+  th, td {
+    border: 1px solid #e5e5e5;
+    padding: 10px;
+    text-align: left;
+    font-size: 16px;
+    font-weight: bold;
+  }
+  
+  th {
+    font-weight: bold;
+  }
+  
+  tr:hover {
+    background-color: #f5f5f5;
+  }
+  
+  button {
+    background-color: #c70000;
+    color: #ffffff;
+    border: none;
+    padding: 8px 16px;
+    border-radius: 4px;
+    cursor: pointer;
   }
 }
+
