--- a/src/app/features/components/dashboard/dashboard.component.html
+++ b/src/app/features/components/dashboard/dashboard.component.html
@@ -1,4 +1,4 @@
-<body>
+<div >
   <div class="dashboard">
     <h1>Crypto Dashboard <i class="fa-brands fa-bitcoin"></i></h1>
     <input type="text" [(ngModel)]="searchText" placeholder="Search Crypto" />
@@ -53,4 +53,4 @@
       </button>
     </div>
   </div>
-</body>
+</div>
