--- a/src/app/features/components/home/home.component.html
+++ b/src/app/features/components/home/home.component.html
@@ -1,4 +1,4 @@
-<body>
+<div class="container">
     <div class="home">
         <div class="get-started">
             <div>
@@ -8,11 +8,9 @@
                 <a routerLink="/register" routerLinkActive="active" ariaCurrentWhenActive="page">Get Started</a>
             </div>
         </div>
-        <div class="image">
             <img src="../../../../assets/images/home.png" alt="">
-        </div>
     </div>
     <div class="description">
         <h1>Buy, sell, and spend crypto on the world's most trusted crypto exchange</h1>
     </div>
-</body>
+</div>
