--- a/src/app/auth/components/login/login.component.scss
+++ b/src/app/auth/components/login/login.component.scss
@@ -20,7 +20,7 @@ body {
     }
 
     i {
-      color: #0055ff;
+      color: $primary-c;
       font-size: 20px;
     }
     label {
@@ -38,7 +38,7 @@ body {
     }
 
     button {
-      background-color: #0055ff;
+      background-color: $primary-c;
       color: #fff;
       border: none;
       border-radius: 4px;
