--- a/src/app/features/components/buy-sell/buy-sell.component.scss
+++ b/src/app/features/components/buy-sell/buy-sell.component.scss
@@ -1,8 +1,6 @@
-body {
+div {
   display: flex;
-  justify-content: center;
-  margin: 0;
-  font-family: monospace;
+  width: 100%;
   .dashboard {
     display: flex;
     flex-direction: column;
@@ -11,20 +9,23 @@ body {
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     padding: 20px;
     margin-top: 30px;
-
+     th, td {
+      border-bottom: 2px solid $primary-c;
+    }
     .crypto-table {
       border-collapse: collapse;
       background-color: #fff;
       border-radius: 8px;
       box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+      
     }
     h1 {
       font-size: 35px;
       font-weight: bolder;
       padding-bottom: 15px;
       margin: 0 auto;
-      font-family: Georgia, "Times New Roman", Times, serif;
-      color: #024f02;
+      color: $primary-c;
+      margin-bottom: 30px;
     }
  
 
@@ -34,6 +35,7 @@ body {
       font-size: 18px;
       font-weight: bolder;
       margin-top: 20px;
+      padding-bottom: 15px;
     }
 
     .crypto-table td {
@@ -47,11 +49,11 @@ body {
     }
 
     .crypto-table .change {
-      color: #024f02;
+      color: $primary-c;
     }
 
     button {
-      background-color: #024f02;
+      background-color: $primary-c;
       color: #fff;
       border: none;
       padding: 10px 20px;
