--- a/src/app/features/components/history/history.component.scss
+++ b/src/app/features/components/history/history.component.scss
@@ -2,7 +2,6 @@ body {
   display: flex;
   justify-content: center;
   margin: 0;
-  font-family: monospace;
   div {
     background-color: #ffffff;
     border-radius: 8px;
@@ -16,7 +15,6 @@ body {
       color: #333;
       margin-bottom: 20px;
       font-weight: bold;
-      font-family: Georgia, "Times New Roman", Times, serif;
     }
 
     table {
@@ -37,7 +35,7 @@ body {
 
       th {
         background-color: #f0f0f0;
-        color: #0055ff;
+        font-weight: bolder;
       }
 
       tr:hover {
