--- a/src/app/features/components/home/home.component.scss
+++ b/src/app/features/components/home/home.component.scss
@@ -1,34 +1,30 @@
-body {
- 
+div {
   .home {
     padding-top: 40px;
     display: flex;
-    justify-content: center;
+    justify-content: space-between;
     align-items: center;
     padding-bottom: 85px;
 
-    .image {
-      img {
-        max-width: 80%;
-        height: 80%;
-        
-      }
+    img {
+      max-width: 45%;
+      aspect-ratio: 1/1;
+      object-fit: contain;
     }
     .get-started {
+      max-width: 45%;
       div {
-        margin-left: 20%;
         h1 {
           font-size: 60px;
           font-weight: bold;
-          max-width: 70%;
           line-height: 70px;
           margin-bottom: 20px;
         }
         p {
           font-size: large;
           font-weight: bold;
-          max-width: 80%;
-          margin-bottom: 35px;
+
+          margin-bottom: 50px;
         }
         a {
           padding: 20px 40px;
@@ -52,7 +48,7 @@ body {
     h1 {
       color: #014cec;
       font-size: 30px;
-      font-weight: bold;
+      font-weight: bolder;
     }
   }
 }
