--- a/src/app/features/components/user-profile/user-profile.component.html
+++ b/src/app/features/components/user-profile/user-profile.component.html
@@ -11,17 +11,17 @@
       <tr class="head">
         <td></td>
         <td>Balance:</td>
-        <td>{{ user.balance | numberFormat }} $</td>
+        <td class="num-font">{{ user.balance | numberFormat }} $</td>
       </tr>
       <tr class="head">
         <td></td>
-        <td class="crypto"><i class="fa-brands fa-bitcoin">crypto</i></td>
+        <td class="crypto"><i class="fa-brands fa-bitcoin"></i>Crypto</td>
         <td></td>
       </tr>
       <tr *ngFor="let crypto of user.crypto">
         <td></td>
         <td class="crypto-key">{{ crypto.id }}:</td>
-        <td class="crypto-value">{{ crypto.cryptoAmount | numberFormat }}</td>
+        <td class="crypto-value num-font">{{ crypto.cryptoAmount | numberFormat }}</td>
       </tr>
     </table>
   </div>
