--- a/src/app/features/components/user-profile/user-profile.component.scss
+++ b/src/app/features/components/user-profile/user-profile.component.scss
@@ -1,5 +1,4 @@
 body {
-  font-family: Arial, sans-serif;
   margin: 0;
   padding: 0;
   div {
@@ -19,11 +18,13 @@ body {
   h1{
     margin-top: 10px;
     font-weight: bold;
+
+    font-weight: bold;
   }
 
   .fa-regular.fa-user {
     font-size: 60px;
-    color: #3273dc;
+    color: #014cec;
   }
 
   table {
@@ -44,7 +45,7 @@ body {
         padding-left: 10px;
       }
       .crypto{
-        color: #8d8d00;
+        color: #014cec;
       }
     }
   }
@@ -56,8 +57,7 @@ body {
 
   .crypto-value {
     font-weight: bold;
-    color: #3273dc;
-    font-family: monospace;
+    color: #014cec;
     font-size: 18px;
   }
 }
