--- a/src/app/navbar/navbar.component.scss
+++ b/src/app/navbar/navbar.component.scss
@@ -1,12 +1,16 @@
 nav {
+  width: 100%;
   background-color: #ffffff;
-  color: #000000;
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
-  padding: 10px 20px;
   box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px,
   rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
+  .container{
+    color: #000000;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 10px 20px;
+    
+  }
   a {
     text-decoration: none;
     box-shadow: inset 0 0 0 0 #014cec;
@@ -32,7 +36,7 @@ nav {
 
   li div a {
     margin: 18px;
-    font-weight: bolder;
+
   }
 
   .right.right-button-container {
@@ -45,7 +49,6 @@ nav {
     text-decoration: none;
     color: #ffffff;
     margin: 0 10px;
-    font-weight: bolder;
     transition: color 0.3s;
     padding: 8px 16px;
     background-color: #014cec;
