--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,12 +1,15 @@
 /* You can add global styles to this file, and also import other style files */
-$mobile: "(max-width: 767px)";
-$tablet: "(min-width: 768px) and (max-width: 1023px)";
-$desktop: "(min-width: 1024px)";
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;800&family=Raleway:wght@100;400;700;800;900&display=swap");
+
+$primary-c: #0054fe;
+$green-c: #088450;
+$red-c: #840808;
 
 * {
   padding: 0;
   margin: 0;
   box-sizing: border-box;
+  font-family: "Poppins", sans-serif;
 }
 html,
 body {
@@ -14,4 +17,14 @@ body {
 }
 body {
   margin: 0;
+}
+
+.num-font {
+  font-family: monospace, sans-serif;
+}
+
+.container {
+  max-width: 1200px;
+  margin-inline: auto;
+  padding-inline: 40px;
 }
